2018-07-01
    \D escape argument with multiple consecutive spaces fixed.
    Bug reported by @nbuwe in issue #73

2018-05-08
    \D'A' escape fixed by Valery Ushakov

2018-05-05
    Rename .elpchar variable to use same convention as .sentchar,
    .transchar, etc.

2018-05-05
    Add .rhanglevel to table of request names; .rhanglevel should work now.

2018-05-05
    Update .elpchar for change to propchar().  .elpchar options now work the
    same as .sentchar, .transchar, etc.

2018-05-05
    Mark end of user-defined list in propchar().  Default list can now be
    restored with \r.  

2018-04-26
    Improvement to issue #70 bug fix by reffort@GitHub.

2018-04-25
    * Issue #70 bug fixed by reffort@GitHub:
      A user-defined list of sentence-ending characters, transparent
      characters, etc., can contain unwanted characters.

    * Bug reported by Valery Ushakov: troff -mdoc does output header
      before ditroff p command.

2018-04-15
    Move typo variables into the troff environment.

2018-03-09
    .lsm bugfix:
        - Read argument in no-ligature mode (issue 68)
        - Remove format from prefetched character of lines
          starting with whitespace (issue 69)

    Reported by aksr@GitHub

2018-01-28
    afm.c:  Conflicting math names expose a bug in dpost that puts wrong glyph
    in output.

2018-01-26
    Do not count sentence spaces as adjustable when doing letter adjustment.

2018-01-26
    Do not take rhang into account for penalties that don't affect word spaces.

2018-01-22
    Make selecting word space bins less inefficient.

2018-01-22
    Take rhang into account when making decision for lastlinestretch.

2018-01-20
    Various minor edits to parcomp_rf().

2018-01-20
    Take rhang into account for some minor features in parcomp().

2018-01-11
    Explicit hyphen penalty .exhyp now acts like the current-line hyphenation
    penalty hypp1.

2018-01-08
    Add .rhanglevel to take .rhang into account when breaking lines.

2018-01-08